--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "tests"
   ],
   "dependencies": {
-    "leaflet": "^1.0.2",
-    "jquery": "^3.1.1"
+    "leaflet": "0.7.7",
+    "jquery": "^3.1.1",
+    "Leaflet.label": "^0.2.1"
   }
 }
