--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "geolib": "git+https://github.com/j33f/Geolib.git",
     "hbs": "~4.0.1",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
     "node-uuid": "^1.4.7",
+    "person-generator": "^1.0.1",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "sails-disk": "^0.10.10",
     "sails-memory": "^0.10.7",
     "serve-favicon": "~2.3.0",
