--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sails-disk": "^0.10.10",
     "sails-memory": "^0.10.7",
     "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.1",
     "waterline": "^0.11.6",
     "waterline-mysql": "^0.6.0"
   }
