--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "leaflet": "0.7.7",
     "jquery": "^3.1.1",
-    "Leaflet.label": "^0.2.1"
+    "Leaflet.label": "^0.2.1",
+    "Leaflet.MovingMarker": "*"
   }
 }
